<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_clear"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/clear"
        android:textSize="@dimen/textSize"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/first_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_7"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            android:text="@string/_7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_8"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            android:text="@string/_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_9"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            android:text="@string/_9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_div"

            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:layout_weight="1"
            android:onClick="onOperationClick"
            android:text="@string/division" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/first_layout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_4"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            android:text="@string/_4"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_5"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            android:text="@string/_5"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_6"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            android:text="@string/_6"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_multiply"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:layout_weight="1"
            android:onClick="onOperationClick"
            android:text="@string/multiplication"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/third_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/second_layout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_1"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            android:text="@string/_1"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_2"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            android:text="@string/_2"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_3"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            android:text="@string/_3"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_minus"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:layout_weight="1"
            android:onClick="onOperationClick"
            android:text="@string/minus"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/third_layout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_0"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            android:text="@string/_0"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_dot"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            android:text="@string/dot"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_plus"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            android:text="@string/plus"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_equal"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:layout_weight="1"
            android:onClick="onOperationClick"
            android:text="@string/equal"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

</LinearLayout>